--- a/spigot.yml
+++ b/spigot.yml
@@ -3,10 +3,10 @@
 # with caution, and make sure you know what each option does before configuring.
 # For a reference for any variable inside this file, check out the Spigot wiki at
 # http://www.spigotmc.org/wiki/spigot-configuration/
-# 
+#
 # If you need help with the configuration or have any questions related to Spigot,
 # join us at the IRC or drop by our forums and leave a post.
-# 
+#
 # IRC: #spigot @ irc.spi.gt ( http://www.spigotmc.org/pages/irc/ )
 # Forums: http://www.spigotmc.org/
 
@@ -81,13 +81,13 @@ world-settings:
     seed-ocean: 14357621
     seed-outpost: 165745296
     seed-slime: 987234911
-    mob-spawn-range: 8
+    mob-spawn-range: 6
     hopper-amount: 1
     max-tnt-per-tick: 100
     max-entity-collisions: 8
     merge-radius:
-      item: 2.5
-      exp: 3.0
+      item: 4.0
+      exp: 6.0
     entity-tracking-range:
       players: 48
       animals: 48
@@ -112,12 +112,12 @@ world-settings:
       sweetberry-modifier: 100
       kelp-modifier: 100
     entity-activation-range:
-      animals: 32
-      monsters: 32
+      animals: 16
+      monsters: 24
       raiders: 48
-      misc: 16
+      misc: 8
       water: 16
-      tick-inactive-villagers: true
+      tick-inactive-villagers: false
     ticks-per:
       hopper-transfer: 8
       hopper-check: 1
